# docs/swagger.yaml
@@ -25,9 +25,14 @@ definitions:
     type: object
   category.Category:
     properties:
+      categoryId:
+        description: FK
+        type: string
       createAt:
         type: string
       id:
+        type: string
+      name:
         type: string
       slug:
         type: string
@@ -38,10 +43,59 @@ definitions:
     type: object
   category.CategoryInput:
     properties:
+      name:
+        type: string
       slug:
         type: string
       url:
         type: string
+    type: object
+  product.Product:
+    properties:
+      categoryId:
+        description: FK
+        type: string
+      createAt:
+        type: string
+      description:
+        type: string
+      discount:
+        type: number
+      id:
+        type: string
+      isPopular:
+        type: boolean
+      orderCount:
+        type: integer
+      price:
+        type: number
+      tag:
+        type: string
+      title:
+        type: string
+      updatedAt:
+        type: string
+      url:
+        items:
+          type: string
+        type: array
+    type: object
+  product.ProductInput:
+    properties:
+      description:
+        type: string
+      discount:
+        type: number
+      isPopular:
+        type: boolean
+      price:
+        type: number
+      tag:
+        type: string
+      url:
+        items:
+          type: string
+        type: array
     type: object
   seasonalOffer.SeasonalOffer:
     properties:
@@ -301,6 +355,111 @@ paths:
       summary: Health check
       tags:
       - Health
+  /products:
+    get:
+      description: Retrieve all product items
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/product.Product'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get all products
+      tags:
+      - products
+    post:
+      consumes:
+      - application/json
+      description: Add a new product item
+      parameters:
+      - description: Product object
+        in: body
+        name: product
+        required: true
+        schema:
+          $ref: '#/definitions/product.ProductInput'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/product.Product'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+      summary: Create a new product
+      tags:
+      - products
+  /products/{id}:
+    delete:
+      description: Delete a product item
+      parameters:
+      - description: Product ID
+        in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        "204":
+          description: No Content
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Delete product by ID
+      tags:
+      - products
+    put:
+      consumes:
+      - application/json
+      description: Update an existing product
+      parameters:
+      - description: Product ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Product object
+        in: body
+        name: product
+        required: true
+        schema:
+          $ref: '#/definitions/product.Product'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Update product by ID
+      tags:
+      - products
   /seasonalOffers:
     get:
       description: Retrieve all seasonalOffer items
