# product/handler.go
@@ -1,4 +1,4 @@
-package category
+package product
 
 import (
 	"encoding/json"
@@ -8,10 +8,14 @@ import (
 	"go.mongodb.org/mongo-driver/bson/primitive"
 )
 
-type CategoryInput struct {
-	Name string `bson:"name" json:"name"`
-	URL  string `bson:"url" json:"url"`
-	Slug string `bson:"slug" json:"slug"`
+type ProductInput struct {
+	title      string   `bson:"title" json:"title"`
+	Decription string   `bson:"description" json:"description"`
+	URL        []string `json:"url" bson:"url"`
+	Price      float64  `bson:"price" json:"price"`
+	Discount   float64  `bson:"discount" json:"discount"`
+	Tag        string   `bson:"tag" json:"tag"`
+	IsPopular  bool     `bson:"isPopular" json:"isPopular"`
 }
 
 type Handler struct {
@@ -31,42 +35,42 @@ func (h *Handler) RegisterRoutes(r chi.Router) {
 	r.Delete("/{id}", h.Delete)
 }
 
-// @Summary Get all categorys
-// @Description Retrieve all category items
-// @Tags categorys
+// @Summary Get all products
+// @Description Retrieve all product items
+// @Tags products
 // @Produce json
-// @Success 200 {array} Category
+// @Success 200 {array} Product
 // @Failure 500 {string} string "Internal Server Error"
-// @Router /categorys [get]
+// @Router /products [get]
 func (h *Handler) GetAll(w http.ResponseWriter, r *http.Request) {
-	categorys, err := h.service.GetCategorys(r.Context())
+	carousels, err := h.service.GetProducts(r.Context())
 
 	if err != nil {
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
 	}
 
-	json.NewEncoder(w).Encode(categorys)
+	json.NewEncoder(w).Encode(carousels)
 }
 
-// @Summary Create a new category
-// @Description Add a new category item
-// @Tags categorys
+// @Summary Create a new product
+// @Description Add a new product item
+// @Tags products
 // @Accept json
 // @Produce json
-// @Param category body CategoryInput true "Category object"
-// @Success 201 {object} Category
+// @Param product body ProductInput true "Product object"
+// @Success 201 {object} Product
 // @Failure 400 {string} string "Bad Request"
-// @Router /categorys [post]
+// @Router /products [post]
 func (h *Handler) Create(w http.ResponseWriter, r *http.Request) {
-	var c Category
+	var c Product
 
 	if err := json.NewDecoder(r.Body).Decode(&c); err != nil {
 		http.Error(w, "invalid request body", http.StatusBadRequest)
 		return
 	}
 
-	if err := h.service.CreateCategory(r.Context(), &c); err != nil {
+	if err := h.service.CreateProduct(r.Context(), &c); err != nil {
 		http.Error(w, err.Error(), http.StatusBadRequest)
 		return
 	}
@@ -75,17 +79,17 @@ func (h *Handler) Create(w http.ResponseWriter, r *http.Request) {
 	json.NewEncoder(w).Encode(c)
 }
 
-// @Summary Update category by ID
-// @Description Update an existing category
-// @Tags categorys
+// @Summary Update product by ID
+// @Description Update an existing product
+// @Tags products
 // @Accept json
 // @Produce json
-// @Param id path string true "category ID"
-// @Param category body Category true "Category object"
+// @Param id path string true "Product ID"
+// @Param product body Product true "Product object"
 // @Success 200 {object} map[string]string
 // @Failure 400 {string} string "Bad Request"
 // @Failure 500 {string} string "Internal Server Error"
-// @Router /categorys/{id} [put]
+// @Router /products/{id} [put]
 func (h *Handler) Update(w http.ResponseWriter, r *http.Request) {
 	idParam := chi.URLParam(r, "id")
 
@@ -96,13 +100,13 @@ func (h *Handler) Update(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	var c Category
+	var c Product
 	if err := json.NewDecoder(r.Body).Decode(&c); err != nil {
 		http.Error(w, "invalid request body", http.StatusBadRequest)
 		return
 	}
 
-	if err := h.service.UpdateCategory(r.Context(), id, &c); err != nil {
+	if err := h.service.UpdateProduct(r.Context(), id, &c); err != nil {
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
 	}
@@ -110,14 +114,14 @@ func (h *Handler) Update(w http.ResponseWriter, r *http.Request) {
 	json.NewEncoder(w).Encode(map[string]string{"message": "updated successfully"})
 }
 
-// @Summary Delete category by ID
-// @Description Delete a category item
-// @Tags categorys
-// @Param id path string true "category ID"
+// @Summary Delete product by ID
+// @Description Delete a product item
+// @Tags products
+// @Param id path string true "Product ID"
 // @Success 204 {string} string "No Content"
 // @Failure 400 {string} string "Bad Request"
 // @Failure 500 {string} string "Internal Server Error"
-// @Router /categorys/{id} [delete]
+// @Router /products/{id} [delete]
 func (h *Handler) Delete(w http.ResponseWriter, r *http.Request) {
 	idParam := chi.URLParam(r, "id")
 	id, err := primitive.ObjectIDFromHex(idParam)
@@ -126,7 +130,7 @@ func (h *Handler) Delete(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	if err := h.service.DeleteCategory(r.Context(), id); err != nil {
+	if err := h.service.DeleteProduct(r.Context(), id); err != nil {
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
 	}
